2882 [OneClick]             fixed only using at maximum 2 audio/subtible tracks in batch mode (regression of 2861). bug #927
2881 [HD Streams Extractor] force "-keepDialnorm" if required for a E-AC3 tracks
2880 [AVS Script Creator]   fixed initial MediaInfo warning (regression of 2877)
2879 [Queue]                improved power save mode supression (requires at least Windows 7)
2878 [MediaInfo]            improved track detection of Blu-ray playlists
2877 [OneClick]             added support for VFR input files (requires mkv/mp4 output)
     [FFMS Indexer]         added support for VFR input files
     [MKV Muxer]            added detection of timestamp files (must be in the format "videoinputfilename".timestamp.txt)
     [MP4 Muxer]            added mp4fpsmod tool to mux timecodes into mp4 files
     [x264]                 added support for --tc-in
                            


Changelog 2836 --> 2876


Features/Changes:
                       added high bit depth support (requires AVS+)
					   therefore avs4x26x has been replaced by ffmpeg when using x26x
[AviSynth]             changed default value of "always use the included AviSynth" to enabled
[Chapter Creator]      - added option to use an automated counter for chapters (enabled by default)
                       - added fps selector for the input source.it does change the time codes if the input fps is not known (e.g. as with TXT/XML)
                       - the output fps value is used during saving for all output types

Enhancements/Fixes:
[HD Streams Extractor] added an option to select if the output prefix should be added (default: enabled)
[OneClick]             fixed tracks 2 to n-1 not properly selecting their input track stream (regression of 2808). bug #907
[OneClick]             fixed audio track processing for some file types if DG* indexer is used (e.g. VOB without IFO)


Known Problems:
- Windows Vista and older are not supported
- Unicode is not supported